# app/model/transaction.go
@@ -9,11 +9,14 @@ type Transaction struct {
 	Base
 	DataOwner
 	TransactionAPI
-	Total         *float64 `json:"total,omitempty" example:"8000"`                                // Total
-	Status        *string  `json:"status,omitempty" gorm:"type:varchar(256)"`                     // Status
-	NoRef         *string  `json:"no_ref,omitempty" example:"INFQ00001" gorm:"type:varchar(256)"` // No Ref
-	InvoiceNumber *int64   `json:"invoice_number,omitempty" gorm:"default:0"`                     // Invoice Number
-
+	Total         *float64  `json:"total,omitempty" example:"8000"`                                // Total
+	Status        *string   `json:"status,omitempty" gorm:"type:varchar(256)"`                     // Status
+	NoRef         *string   `json:"no_ref,omitempty" example:"INFQ00001" gorm:"type:varchar(256)"` // No Ref
+	InvoiceNumber *int64    `json:"invoice_number,omitempty" gorm:"default:0"`                     // Invoice Number
+	User          *User     `json:"user" gorm:"foreignKey:userID;references:ID"`
+	Payment       *Payment  `json:"payment" gorm:"foreignKey:PaymentID;references:ID"`
+	Category      *Category `json:"category" gorm:"foreignKey:CategoryID;references:ID"`
+	Balance       *Balance  `json:"balance" gorm:"foreignKey:BalanceID;references:ID"`
 }
 
 // TransactionAPI Transaction API
@@ -30,7 +33,7 @@ type TransactionAPI struct {
 	ContactName  *string    `json:"contact_name,omitempty" example:"pak guru" gorm:"type:varchar(256)"` // Contact Name
 	Discount     *float64   `json:"discount,omitempty" example:"2000"`                                  // Discount
 	DiscountType *int       `json:"discount_type,omitempty" gorm:"type:smallint"`                       // 1 = percentage 2 = amount
-	UserID       *uuid.UUID `json:"user_id,omitempty" swaggertype:"string" format:"uuid"`                // UserID
+	UserID       *uuid.UUID `json:"user_id,omitempty" swaggertype:"string" format:"uuid"`               // UserID
 	PaymentID    *uuid.UUID `json:"payment_id,omitempty" swaggertype:"string" format:"uuid"`            // PaymentID
 	CategoryID   *uuid.UUID `json:"category_id,omitempty" swaggertype:"string" format:"uuid"`           // CategoryID
 	BalanceID    *uuid.UUID `json:"balance_id,omitempty" swaggertype:"string" format:"uuid"`            // BalanceID
