# app/model/user.go
@@ -14,6 +14,8 @@ type User struct {
 	Base
 	DataOwner
 	UserAPI
+	Role  *Role  `json:"role" gorm:"foreignKey:RoleID;references:ID"`
+	Group *Group `json:"group" gorm:"foreignKey:GroupID;references:ID"`
 }
 
 // UserAPI User API
