# docs/swagger-dev.yaml
@@ -108,12 +108,6 @@ definitions:
         description: sort (increment)
         example: 1
         type: integer
-      transaction:
-        $ref: '#/definitions/model.Transaction'
-      transaction_id:
-        description: BalanceID
-        format: uuid
-        type: string
       updated_at:
         description: updated at automatically changed on put or add on post
         format: date-time
@@ -136,10 +130,6 @@ definitions:
         description: Name
         example: Kas Amil
         type: string
-      transaction_id:
-        description: BalanceID
-        format: uuid
-        type: string
     type: object
   model.BalanceRecord:
     properties:
@@ -147,6 +137,8 @@ definitions:
         description: Amount
         example: 200000
         type: number
+      balance:
+        $ref: '#/definitions/model.Balance'
       balance_id:
         description: Balance ID
         format: uuid
@@ -175,6 +167,8 @@ definitions:
         description: sort (increment)
         example: 1
         type: integer
+      transaction:
+        $ref: '#/definitions/model.Transaction'
       transaction_id:
         description: Transaction ID
         format: uuid
@@ -337,6 +331,66 @@ definitions:
         example: SMA Negri 1
         type: string
     type: object
+  model.Input:
+    properties:
+      category:
+        $ref: '#/definitions/model.Category'
+      category_id:
+        description: Category ID
+        format: uuid
+        type: string
+      created_at:
+        description: created at automatically inserted on post
+        format: date-time
+        type: string
+      creator_id:
+        description: creator id
+        format: uuid
+        type: string
+      group:
+        $ref: '#/definitions/model.Group'
+      group_id:
+        description: Group ID
+        format: uuid
+        type: string
+      id:
+        description: model ID
+        format: uuid
+        type: string
+      modifier_id:
+        description: modifier id
+        format: uuid
+        type: string
+      sort:
+        description: sort (increment)
+        example: 1
+        type: integer
+      updated_at:
+        description: updated at automatically changed on put or add on post
+        format: date-time
+        type: string
+      user:
+        $ref: '#/definitions/model.User'
+      user_id:
+        description: User ID
+        format: uuid
+        type: string
+    type: object
+  model.InputAPI:
+    properties:
+      category_id:
+        description: Category ID
+        format: uuid
+        type: string
+      group_id:
+        description: Group ID
+        format: uuid
+        type: string
+      user_id:
+        description: User ID
+        format: uuid
+        type: string
+    type: object
   model.Page:
     properties:
       first:
@@ -429,16 +483,68 @@ definitions:
         example: Cash
         type: string
     type: object
+  model.Role:
+    properties:
+      code:
+        description: Code
+        type: string
+      created_at:
+        description: created at automatically inserted on post
+        format: date-time
+        type: string
+      creator_id:
+        description: creator id
+        format: uuid
+        type: string
+      description:
+        description: Description
+        type: string
+      id:
+        description: model ID
+        format: uuid
+        type: string
+      modifier_id:
+        description: modifier id
+        format: uuid
+        type: string
+      name:
+        description: Name
+        type: string
+      sort:
+        description: sort (increment)
+        example: 1
+        type: integer
+      updated_at:
+        description: updated at automatically changed on put or add on post
+        format: date-time
+        type: string
+    type: object
+  model.RoleAPI:
+    properties:
+      code:
+        description: Code
+        type: string
+      description:
+        description: Description
+        type: string
+      name:
+        description: Name
+        type: string
+    type: object
   model.Transaction:
     properties:
       amount:
         description: Income
         example: 5000
         type: number
+      balance:
+        $ref: '#/definitions/model.Balance'
       balance_id:
         description: BalanceID
         format: uuid
         type: string
+      category:
+        $ref: '#/definitions/model.Category'
       category_id:
         description: CategoryID
         format: uuid
@@ -497,6 +603,8 @@ definitions:
         description: Note
         example: lorem ipsum
         type: string
+      payment:
+        $ref: '#/definitions/model.Payment'
       payment_id:
         description: PaymentID
         format: uuid
@@ -527,6 +635,8 @@ definitions:
         description: updated at automatically changed on put or add on post
         format: date-time
         type: string
+      user:
+        $ref: '#/definitions/model.User'
       user_id:
         description: UserID
         format: uuid
@@ -622,6 +732,8 @@ definitions:
         description: Gender
         example: male
         type: string
+      group:
+        $ref: '#/definitions/model.Group'
       group_id:
         description: GroupID
         format: uuid
@@ -648,6 +760,8 @@ definitions:
       password:
         description: Password
         type: string
+      role:
+        $ref: '#/definitions/model.Role'
       role_id:
         description: Role
         format: uuid
@@ -2029,6 +2143,238 @@ paths:
       summary: show info response
       tags:
       - API
+  /inputs:
+    get:
+      consumes:
+      - application/json
+      description: List of Input
+      parameters:
+      - description: Page number start from zero
+        in: query
+        name: page
+        type: integer
+      - description: Size per page, default `0`
+        in: query
+        name: size
+        type: integer
+      - description: Sort by field, adding dash (`-`) at the beginning means descending
+          and vice versa
+        in: query
+        name: sort
+        type: string
+      - description: Select specific fields with comma separated
+        in: query
+        name: fields
+        type: string
+      - description: custom filters, see [more details](https://github.com/morkid/paginate#filter-format)
+        in: query
+        name: filters
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.Page'
+            - properties:
+                items:
+                  items:
+                    $ref: '#/definitions/model.Input'
+                  type: array
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/lib.Response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/lib.Response'
+      summary: List of Input
+      tags:
+      - Input
+    post:
+      consumes:
+      - application/json
+      description: Create new Input
+      parameters:
+      - description: User ID
+        in: header
+        name: X-User-ID
+        type: string
+      - description: Input data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/model.InputAPI'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Input data
+          schema:
+            $ref: '#/definitions/model.Input'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/lib.Response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/lib.Response'
+      summary: Create new Input
+      tags:
+      - Input
+  /inputs/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete Input by id
+      parameters:
+      - description: Input ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/lib.Response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/lib.Response'
+      summary: Delete Input by id
+      tags:
+      - Input
+    get:
+      consumes:
+      - application/json
+      description: Get a Input by id
+      parameters:
+      - description: Input ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Input'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/lib.Response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/lib.Response'
+      summary: Get a Input by id
+      tags:
+      - Input
+    put:
+      consumes:
+      - application/json
+      description: Update Input by id
+      parameters:
+      - description: User ID
+        in: header
+        name: X-User-ID
+        type: string
+      - description: Input ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Input data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/model.InputAPI'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Input data
+          schema:
+            $ref: '#/definitions/model.Input'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/lib.Response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/lib.Response'
+      summary: Update Input by id
+      tags:
+      - Input
   /payments:
     get:
       consumes:
@@ -2261,6 +2607,238 @@ paths:
       summary: Update Payment by id
       tags:
       - Payment
+  /roles:
+    get:
+      consumes:
+      - application/json
+      description: List of Role
+      parameters:
+      - description: Page number start from zero
+        in: query
+        name: page
+        type: integer
+      - description: Size per page, default `0`
+        in: query
+        name: size
+        type: integer
+      - description: Sort by field, adding dash (`-`) at the beginning means descending
+          and vice versa
+        in: query
+        name: sort
+        type: string
+      - description: Select specific fields with comma separated
+        in: query
+        name: fields
+        type: string
+      - description: custom filters, see [more details](https://github.com/morkid/paginate#filter-format)
+        in: query
+        name: filters
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/model.Page'
+            - properties:
+                items:
+                  items:
+                    $ref: '#/definitions/model.Role'
+                  type: array
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/lib.Response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/lib.Response'
+      summary: List of Role
+      tags:
+      - Role
+    post:
+      consumes:
+      - application/json
+      description: Create new Role
+      parameters:
+      - description: User ID
+        in: header
+        name: X-User-ID
+        type: string
+      - description: Role data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/model.RoleAPI'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Role data
+          schema:
+            $ref: '#/definitions/model.Role'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/lib.Response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/lib.Response'
+      summary: Create new Role
+      tags:
+      - Role
+  /roles/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete Role by id
+      parameters:
+      - description: Role ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/lib.Response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/lib.Response'
+      summary: Delete Role by id
+      tags:
+      - Role
+    get:
+      consumes:
+      - application/json
+      description: Get a Role by id
+      parameters:
+      - description: Role ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Role'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/lib.Response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/lib.Response'
+      summary: Get a Role by id
+      tags:
+      - Role
+    put:
+      consumes:
+      - application/json
+      description: Update Role by id
+      parameters:
+      - description: User ID
+        in: header
+        name: X-User-ID
+        type: string
+      - description: Role ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Role data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/model.RoleAPI'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Role data
+          schema:
+            $ref: '#/definitions/model.Role'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/lib.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/lib.Response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/lib.Response'
+      summary: Update Role by id
+      tags:
+      - Role
   /transactions:
     get:
       consumes:
